--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "clsx": "^2.0.0",
+    "firebase": "^10.6.0",
     "next": "14.0.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.0.0"
+    "react-hook-form": "^7.48.2",
+    "tailwind-merge": "^2.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
